--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,26 @@ header {
   align-content: center;
   margin-bottom: var(--space-4);
 }
+
+.servicos-cta-left,
+.servicos-cta-right {
+  opacity: 0;
+  transition: 0.8s ease;
+}
+
+.servicos-cta-left {
+  transform: translateX(-60px);
+}
+
+.servicos-cta-right {
+  transform: translateX(60px);
+}
+
+.servicos-cta.show .servicos-cta-left,
+.servicos-cta.show .servicos-cta-right {
+  opacity: 1;
+  transform: translateX(0);
+}
 /* SERVICOS */
 
 /* CLIENTS */
@@ -827,11 +847,11 @@ header {
 
 @keyframes scroll-right {
   0% {
-    transform: translateX(0%);
+    transform: translateX(-60%);
   }
 
   100% {
-    transform: translateX(20%);
+    transform: translateX(-20%);
   }
 }
 
@@ -867,6 +887,7 @@ header {
   max-width: 120px;
   max-height: 100px;
   object-fit: contain; 
+  background-color: transparent;
   filter: grayscale(100%);
   opacity: 0.85;
   transition: all 0.3s ease;
@@ -940,6 +961,31 @@ header {
   justify-content: end;
   padding: var(--space-1);
 }
+
+.aqui-nos-left,
+.aqui-nos-center,
+.aqui-nos-right {
+  opacity: 0;
+  transform: translateX(-40px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.show-left {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.show-center {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.show-right {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
 /* AQUI NOS */
 
 /* FOOTER */
@@ -1224,6 +1270,11 @@ header {
     padding: 0 var(--space-5);
   }
 
+   .servicos-row-left .btn {
+    max-width: 300px;
+    margin: var(--space-3) auto;
+   }
+
   .servicos-row-right {
     flex: 1;
     align-content: center;
@@ -1236,6 +1287,11 @@ header {
     object-fit: cover;
     padding: 0 var(--space-5);
   }
+
+   .servicos-row-right .btn {
+    max-width: 300px;
+    margin: var(--space-3) auto;
+   }
 
   .servicos-cta {
     display: flex;
@@ -1331,7 +1387,7 @@ header {
 
   .client-logo-container img {
     max-width: 120px;
-    max-height: 100px;
+    max-height: auto;
   }
 
   /* footer area */
