--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ header {
 /* HERO */
 .hero {
   min-height: 70vh;
-  background: url('../assets/images/hero.jpg') center center / cover no-repeat;
+  background: url('../assets/images/hero.webp') center center / cover no-repeat;
   position: relative;
   display: flex;
   align-items: center;
