--- a/css/style.css
+++ b/css/style.css
@@ -670,6 +670,12 @@ header {
   padding: 0;
 }
 
+.servicos-row-left .btn {
+  max-width: 250px;
+  margin: auto;
+  margin-bottom: var(--space-4);
+}
+
 .servicos-row-right {
   flex: 1;
   align-content: center;
@@ -1086,6 +1092,10 @@ header {
 .footer-rights {
   flex: 1;
   text-align: center;
+  color: var(--branco);
+}
+
+.footer-rights p {
   color: var(--branco);
 }
 
