--- a/css/style.css
+++ b/css/style.css
@@ -626,6 +626,7 @@ header {
   justify-content: end;
   border-left: 2px var(--preto);
   gap: 4px;
+  padding-top: var(--space-3);
 }
 
 .hero-buttons {
@@ -781,7 +782,6 @@ header {
 }
 
 .servico-content {
-  display: grid;
   overflow: hidden;
   transition: max-height 0.4s ease;
   color: var(--branco);
@@ -789,6 +789,7 @@ header {
   flex-direction: row;
   gap: var(--space-4);
   padding: 0; /* 🔑 essencial */
+  max-height: 0;
 }
 
 .servico-content-left,
